# SpriteSheetDetector

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
src/: ForegroundMask.cpp  ForegroundMask.h  GridSpriteDetector.cpp  GridSpriteDetector.h  SpriteDetector.cpp  SpriteDetector.h  main.cpp
